Fix nodes overlapping

--- a/src/style.css
+++ b/src/style.css
@@ -7,47 +7,34 @@ html, body {
   padding: 0;
 }
 
-body {
-  display: flex;
-}
-
 .binary-tree-container {
+  position: relative;
   background-image: url("../public/stacked-waves-haikei.svg");
   background-repeat: no-repeat;
   background-size: 100vw;
-  height: 100vh;
-  width: 80vw;
+  height: 80vh;
+  width: 100vw;
   padding: 5px 30px;
   margin: 0;
 }
 
-/* .left-link .node { */
-/*   position: absolute; */
-/*   right: 50%; */
-/*   top: 20%; */
-/*   display: grid; */
-/*   grid-template-columns: 1fr 1fr; */
-/*   grid-template-rows: 1fr 1fr; */
-/* } */
-/**/
-/* .right-link .node { */
-/*   position: absolute; */
-/*   top: 10%; */
-/*   left: 50%; */
-/*   display: grid; */
-/*   grid-template-columns: 1fr 1fr; */
-/*   grid-template-rows: 1fr 1fr; */
-/**/
-/* } */
-
 .node {
-  display: grid;
-  grid-template-rows: 80px;
+  margin: 50px;
+}
+
+.left-link > .node {
+  position: absolute;
+  right: 5%;
+}
+
+.right-link > .node {
+  position: absolute;
+  left: 5%;
 }
 
 .value {
-  justify-self: center;
-  grid-column-start: span 2;
+  position: absolute;
+  left: 50%;
   padding-top: 10px;
   width: 50px;
   height: 50px;
@@ -59,25 +46,14 @@ body {
   background-size: 100%;
 }
 
-.left-link > .node {
-}
-
-.right-link > .node > .value {
-}
-
 .left-link {
-  width: 100%;
-  /* border-top: 2px black solid; */
-  /* border-left: 2px black solid; */
+  position: absolute;
+  right: 25%;
+  top: 10%;
 }
 
 .right-link {
-  width: 100%;
-  /* border-top: 2px black solid; */
-  /* border-right: 2px black solid; */
-}
-
-
-img {
-  max-width: 100%;
+  position: absolute;
+  left: 25%;
+  top: 10%;
 }
